[workspace]
members = [
    "property-registry",
    "escrow",
    "property-offers",
    "property-nft",
    "property-token",
]
resolver = "2"

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
